# envelope

./: Cargo.toml  DESIGN.md  README.md  RESEARCH.md
examples/: blog.rs
schemas/: envelope.fbs
src/: envelope.rs  error.rs  hash.rs  index.rs  lib.rs  store.rs
