[package]
name = "envelope"
version = "0.1.0"
edition = "2021"
description = "Zero-copy serialization with envelope metadata for graphs"
license = "MIT"
repository = "https://github.com/kanna466/envelope"

[dependencies]
flatbuffers = "24.3"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
flatc-rust = "0.2"

[[bench]]
name = "roundtrip"
harness = false
